# LendingDApp

./: .env  .gitignore  README.md  entities.properties  package.json  replaceValues.js
architecture/: Data.drawio  Vaults.drawio
client/: admin.html  admin.js  create.html  create.js  gateway.js  index.html  index.js  package-lock.json  package.json  packages.txt  style.css
deploy/: deploy-dapp.rt  (+1 more)
scrypto/: Cargo.toml  burn.sh  flash_loan.sh  high_amount.sh  interest.sh  lending_dapp.sh  recall.sh  reward.sh  tokenize.sh
scrypto/dapp_definition/: claimed_entities.rtm  claimed_entities2.rtm  claimed_entities_filled.rtm  claimed_entities_v1.rtm  claimed_website.rtm  claimed_website_filled.rtm  claimed_website_v1.rtm  dynamic_claimed_entities.rtm  dynamic_claimed_website.rtm
scrypto/rtm/: adds_account.rtm  asking_repay.rtm  borrow.rtm  borrow_30.rtm  borrow_account.rtm  borrow_interest.rtm  burn_creditscore.rtm  claim_yield.rtm  clean_data.rtm  config.rtm  extend_lending_pool.rtm  extend_lending_pool_high.rtm  fund.rtm  fund_main_pool.rtm  fund_main_pool_1000.rtm  fund_main_pool_4000.rtm  fund_new.rtm  init_badpayer.rtm  instantiate_lending_dapp.rtm  instantiate_zero_dapp.rtm  lend_reward.rtm  lend_tokens.rtm  lend_tokens2.rtm  lend_tokens_high.rtm  lendings_pool.rtm  main_pool.rtm  mint_bad_payer.rtm  mint_staff_badge.rtm  pools.rtm  recall_manifest.rtm  recall_staff_badge.rtm  redeem_from_pt.rtm  register.rtm  register_account.rtm  register_again.rtm  register_new.rtm  repay.rtm  repay_badpayer.rtm  repay_high.rtm  send_bad_payer.rtm  (+18 more)
scrypto/src/: flash.rs  lending.rs  lib.rs  tokenizer.rs  utils.rs  vote.txt
scrypto/tests/: lib.rs
(+17 files in other folders)
