[package]
name = "zerocollateral"
version = "0.1.0"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.2.0" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.2.0" }
proc-macro2 = "1.0.66"
scrypto_math = { git = "https://github.com/ociswap/scrypto-math", tag = "v0.5.0" }
scrypto_avltree = { git = "https://github.com/ociswap/scrypto-avltree", version = "1.2.0" }
# qrcode = "0.13.0"
num-traits = "0.2.19"

[dev-dependencies]
zerocollateral = { path = ".", features = ["test"] }
# transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }
# radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }
# scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }
# scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }


[features]
default = []
test = []

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
# Set the package crate as its own empty workspace, to hide it from any potential ancestor workspace
# Remove this [workspace] section if you intend the package to be part of a Cargo workspace